// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`ULThemeSubtitle Component matches snapshot with additional props 1`] = `
<p
  class="mb-4 text-body-text justify-text-header text-(length:--ul-theme-font-subtitle-size) font-subtitle"
  data-testid="subtitle"
  id="test-id"
>
  Test Subtitle
</p>
`;

exports[`ULThemeSubtitle Component matches snapshot with custom className 1`] = `
<p
  class="mb-4 text-body-text justify-text-header text-(length:--ul-theme-font-subtitle-size) font-subtitle custom-class"
>
  Test Subtitle
</p>
`;

exports[`ULThemeSubtitle Component matches snapshot with default props 1`] = `
<p
  class="mb-4 text-body-text justify-text-header text-(length:--ul-theme-font-subtitle-size) font-subtitle"
>
  Test Subtitle
</p>
`;

exports[`ULThemeSubtitle Component matches snapshot with multiple children 1`] = `
<p
  class="mb-4 text-body-text justify-text-header text-(length:--ul-theme-font-subtitle-size) font-subtitle"
>
  <span>
    Child 1
  </span>
  <span>
    Child 2
  </span>
</p>
`;
